# event-bus-test

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CDC_OUTBOX.md  MIGRATION.md  MIGRATION_PLAYBOOK.md  MONITORING.md  SCHEMAS.md  SCHEMA_REGISTRY.md  SECURITY.md  USAGE.md
examples/: example_consumer.py  example_outbox_insert.py  example_producer.py
infrastructure/debezium/: postgres-outbox-connector.json
olive_events_bus/: __init__.py  config.py  consumer.py  envelope.py  events.py  observability.py  outbox.py  producer.py  schema.py
olive_events_bus/admin/: topics.py
olive_events_bus/schemas/leaves/: leave.approved.v1.json  leave.cancelled.v1.json  leave.rejected.v1.json  leave.requested.v1.json  leave.updated.v1.json
olive_events_bus/schemas/user/: user.created.v1.json
scripts/: bootstrap_local_kafka.md  create_topics.py
